--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px;
-  min-width: 400px;
+  max-width: 302px;
+  margin: 0 auto;
+}
+
+label {
+  color:#5f9341;
+  font-weight: 900;
 }
 
 input {
@@ -27,6 +33,10 @@ button {
   color: white;
   padding: 10px 20px;
   font-weight: bold;
+}
+
+#btn-grp {
+  text-align: center;
 }
 
 #delete-btn {
